[project]
name = "mcp-bridge-server"
version = "0.1.0"
description = "Local server for MCP Bridge extension"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-bridge = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
